--- a/index.html
+++ b/index.html
@@ -19,8 +19,26 @@
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
   <body>
-    How did we do? Please let us know how we did with your support request. All
-    feedback is appreciated to help us improve our offering! 1 2 3 4 5 Submit
+    <section class="container">
+      <form>
+        <div id="star"
+          ><img src="./images/icon-star.svg" alt="" aria-hidden="true"
+        /></div>
+        <h1>How did we do?</h1>
+        <p>
+          Please let us know how we did with your support request. All feedback
+          is appreciated to help us improve our offering!
+        </p>
+        <div class="ratings">
+          <button class="rating-btn">1</button>
+          <button class="rating-btn">2</button>
+          <button class="rating-btn">3</button>
+          <button class="rating-btn">4</button>
+          <button class="rating-btn">5</button>
+        </div>
+        <button id="submit" type="submit">Submit</button>
+      </form>
+    </section>
     <script src="./app.js"></script>
   </body>
 </html>
